codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
  Viewed Image
  └ example.png
